crates/otio-capi/include/otio.h

/* ===================================================================== *
 * Status
 * ===================================================================== */

/** What a call did, or why it could not. */
typedef enum OtioStatus {
    /** The call succeeded. */
    OTIO_STATUS_OK = 0,
    /** A pointer argument that may not be null was null. */
    OTIO_STATUS_NULL_POINTER = 1,
    /** A string argument was not valid UTF-8. */
    OTIO_STATUS_INVALID_UTF8 = 2,
    /** The call succeeded, and the answer is that there is no value. */
    OTIO_STATUS_NO_VALUE = 3,
    /** A node handle named an object that no longer exists. */
    OTIO_STATUS_STALE_HANDLE = 4,
    /** An argument was outside the range the call accepts. */
    OTIO_STATUS_INVALID_ARGUMENT = 5,
    /** The document could not answer the question asked of it. */
    OTIO_STATUS_CORE_ERROR = 6,
    /** A timecode or time string could not be read or written. */
    OTIO_STATUS_TIME_ERROR = 7,
    /** A file was not valid for the format it was read as. */
    OTIO_STATUS_PARSE_ERROR = 8,
    /** The document holds something the target format cannot express. */
    OTIO_STATUS_UNSUPPORTED = 9,
    /** A file could not be read from or written to disk. */
    OTIO_STATUS_IO_ERROR = 10,
    /** A panic in the Rust core was caught at the boundary. */
    OTIO_STATUS_PANIC = 11
} OtioStatus;
/* ===================================================================== *
 * Values
 * ===================================================================== */

/**
 * A block of bytes owned by the library.
 *
 * `data` is always NUL-terminated, so a buffer holding text can be used as a
 * C string directly; `len` counts the bytes before the terminator, which is
 * what a caller holding binary data needs.
 */
typedef struct OtioBuffer {
    char *data;
    size_t len;
} OtioBuffer;
/** A measure of time, as a `value` in units of `1 / rate` seconds. */
typedef struct OtioRationalTime {
    double value;
    double rate;
} OtioRationalTime;
/** A span of time: where it starts and how long it lasts. */
typedef struct OtioTimeRange {
    OtioRationalTime start_time;
    OtioRationalTime duration;
} OtioTimeRange;
/** An offset, a speed change and a rate change, applied together. */
typedef struct OtioTimeTransform {
    OtioRationalTime offset;
    double scale;
    double rate;
} OtioTimeTransform;
/** Whether a timecode is written in drop-frame form. */
typedef enum OtioDropFrame {
    /** Use drop-frame form if the rate is a drop-frame rate. */
    OTIO_DROP_FRAME_INFER_FROM_RATE = 0,
    /** Never use drop-frame form. */
    OTIO_DROP_FRAME_FORCE_NO = 1,
    /** Use drop-frame form, failing if the rate has none. */
    OTIO_DROP_FRAME_FORCE_YES = 2
} OtioDropFrame;
/* ===================================================================== *
 * Documents and handles
 * ===================================================================== */

/**
 * An OTIO document: the arena that owns every object in a timeline.
 *
 * Releasing it releases every object in it, so handles into it go stale
 * rather than dangling.
 */
typedef struct OtioDocument OtioDocument;
/**
 * A handle to an object in a document.
 *
 * An index into the document's arena and the generation of the slot it was
 * issued for. If the object is removed and the slot reused, the generation no
 * longer matches, so a stale handle fails a lookup instead of reaching the
 * new occupant.
 */
typedef struct OtioNode {
    uint32_t index;
    uint32_t generation;
} OtioNode;
/**
 * Creates a stack.
 */
OtioStatus otio_stack_new(OtioDocument *target, const char *name, OtioNode *out_node);
/**
 * Creates a time effect: an effect that alters timing and has no parameters.
 */
OtioStatus otio_time_effect_new(
    OtioDocument *target,
    const char *name,
    const char *effect_name,
    OtioNode *out_node);
/**
 * Creates a serializable collection: a group of objects with no timing.
 */
OtioStatus otio_serializable_collection_new(
    OtioDocument *target,
    const char *name,
    OtioNode *out_node);
/**
 * Returns whether an object covers what is beneath it when its composition is
 * flattened.
 */
OtioStatus otio_node_visible(
    const OtioDocument *source,
    OtioNode node_handle,
    bool *out_visible);
/**
 * Clears where a timeline begins.
 */
OtioStatus otio_timeline_clear_global_start_time(
    OtioDocument *target,
    OtioNode node_handle);
/**
 * Returns whether a time is usable: both parts finite and the rate positive.
 */
bool otio_rational_time_is_valid(OtioRationalTime time);
/**
 * Returns the same instant expressed at another rate.
 */
OtioRationalTime otio_rational_time_rescaled_to(OtioRationalTime time, double rate);
/**
 * Returns the same instant expressed at another time's rate.
 */
OtioRationalTime otio_rational_time_rescaled_to_time(
    OtioRationalTime time,
    OtioRationalTime other);
/**
 * Returns what this time's value would be at another rate.
 */
double otio_rational_time_value_rescaled_to(OtioRationalTime time, double rate);
/**
 * Returns whether two times are within `delta` of each other.
 */
bool otio_rational_time_almost_equal(
    OtioRationalTime left,
    OtioRationalTime right,
    double delta);
/**
 * Returns whether two times are the same instant.
 *
 * Times at different rates that name the same instant compare equal; this is
 * upstream's `==`, not a field-by-field comparison. For that, use
 * [`otio_rational_time_strictly_equal`].
 */
bool otio_rational_time_equal(OtioRationalTime left, OtioRationalTime right);
/**
 * Returns whether two times have the same value and the same rate.
 */
bool otio_rational_time_strictly_equal(OtioRationalTime left, OtioRationalTime right);
/**
 * Orders two times: -1 if `left` is earlier, 1 if later, 0 if the same.
 *
 * A comparison involving a NaN has no answer, and reports 0.
 */
int32_t otio_rational_time_compare(OtioRationalTime left, OtioRationalTime right);
/**
 * Returns the sum of two times, at the higher of the two rates.
 */
OtioRationalTime otio_rational_time_add(OtioRationalTime left, OtioRationalTime right);
/**
 * Returns the difference of two times, at the higher of the two rates.
 */
OtioRationalTime otio_rational_time_subtract(
    OtioRationalTime left,
    OtioRationalTime right);
/**
 * Returns the time with its sign flipped.
 */
OtioRationalTime otio_rational_time_negate(OtioRationalTime time);
/**
 * Returns the time rounded towards negative infinity.
 */
OtioRationalTime otio_rational_time_floor(OtioRationalTime time);
/**
 * Returns the time rounded towards positive infinity.
 */
OtioRationalTime otio_rational_time_ceil(OtioRationalTime time);
/**
 * Returns the time rounded to the nearest whole value, halves away from zero.
 */
OtioRationalTime otio_rational_time_round(OtioRationalTime time);
/**
 * Returns how long it is from one instant to another, the end excluded.
 */
OtioRationalTime otio_rational_time_duration_from_start_end_time(
    OtioRationalTime start_time,
    OtioRationalTime end_time_exclusive);
/**
 * Returns how long it is from one instant to another, the end included.
 */
OtioRationalTime otio_rational_time_duration_from_start_end_time_inclusive(
    OtioRationalTime start_time,
    OtioRationalTime end_time_inclusive);
/**
 * Builds a time from a frame number at a rate.
 */
OtioRationalTime otio_rational_time_from_frames(double frame, double rate);
/**
 * Builds a time from a number of seconds at a rate.
 */
OtioRationalTime otio_rational_time_from_seconds_at_rate(double seconds, double rate);
/**
 * Builds a time from a number of seconds, at a rate of one.
 */
OtioRationalTime otio_rational_time_from_seconds(double seconds);
/**
 * Returns the frame number this time falls on.
 */
int32_t otio_rational_time_to_frames(OtioRationalTime time);
/**
 * Returns the frame number this time falls on at another rate.
 */
int32_t otio_rational_time_to_frames_at_rate(OtioRationalTime time, double rate);
/**
 * Returns the time in seconds.
 */
double otio_rational_time_to_seconds(OtioRationalTime time);
/**
 * Returns whether a rate is one SMPTE timecode is defined for.
 */
bool otio_is_smpte_timecode_rate(double rate);
/**
 * Returns the SMPTE timecode rate closest to a rate.
 */
double otio_nearest_smpte_timecode_rate(double rate);
/**
 * Returns whether a rate is a drop-frame rate.
 */
bool otio_is_drop_frame_rate(double rate);
/**
 * Reads a time from a `HH:MM:SS:FF` timecode at a rate.
 */
OtioStatus otio_rational_time_from_timecode(
    const char *timecode,
    double rate,
    OtioRationalTime *out_time);
/**
 * Reads a time from a `[-]HH:MM:SS.sss` time string at a rate.
 */
OtioStatus otio_rational_time_from_time_string(
    const char *time_string,
    double rate,
    OtioRationalTime *out_time);
/**
 * Writes a time as a timecode at its own rate.
 */
OtioStatus otio_rational_time_to_timecode(
    OtioRationalTime time,
    OtioBuffer *out_timecode);
/**
 * Writes a time as a timecode at a given rate and drop-frame setting.
 */
OtioStatus otio_rational_time_to_timecode_at(
    OtioRationalTime time,
    double rate,
    OtioDropFrame drop_frame,
    OtioBuffer *out_timecode);
/**
 * Writes a time as a timecode, rounding to the nearest frame first.
 */
OtioStatus otio_rational_time_to_nearest_timecode_at(
    OtioRationalTime time,
    double rate,
    OtioDropFrame drop_frame,
    OtioBuffer *out_timecode);
/**
 * Writes a time as a `HH:MM:SS.sss` time string.
 */
OtioStatus otio_rational_time_to_time_string(
    OtioRationalTime time,
    OtioBuffer *out_string);
/**
 * Builds a range from its start and the instant after its end.
 */
OtioTimeRange otio_time_range_from_start_end_time(
    OtioRationalTime start_time,
    OtioRationalTime end_time_exclusive);
/**
 * Builds a range from its start and its last instant.
 */
OtioTimeRange otio_time_range_from_start_end_time_inclusive(
    OtioRationalTime start_time,
    OtioRationalTime end_time_inclusive);
/**
 * Returns whether a range is usable: valid times and a duration of at least
 * zero.
 */
bool otio_time_range_is_valid(OtioTimeRange range);
/**
 * Returns the instant just after the range's end.
 */
OtioRationalTime otio_time_range_end_time_exclusive(OtioTimeRange range);
/**
 * Returns the last instant the range covers.
 */
OtioRationalTime otio_time_range_end_time_inclusive(OtioTimeRange range);
/**
 * Returns the range with its duration lengthened.
 */
OtioTimeRange otio_time_range_duration_extended_by(
    OtioTimeRange range,
    OtioRationalTime by);
/**
 * Returns the smallest range covering both of two ranges.
 */
OtioTimeRange otio_time_range_extended_by(OtioTimeRange range, OtioTimeRange other);
/**
 * Returns the instant pulled inside the range, if it lies outside it.
 */
OtioRationalTime otio_time_range_clamped_time(
    OtioTimeRange range,
    OtioRationalTime time);
/**
 * Returns the range pulled inside this one, where it lies outside it.
 */
OtioTimeRange otio_time_range_clamped_range(OtioTimeRange range, OtioTimeRange other);
/**
 * Returns whether an instant falls inside the range, the end excluded.
 */
bool otio_time_range_contains_time(OtioTimeRange range, OtioRationalTime time);
/**
 * Returns whether another range falls entirely inside this one.
 */
bool otio_time_range_contains_range(
    OtioTimeRange range,
    OtioTimeRange other,
    double epsilon_s);
/**
 * Returns whether an instant falls inside the range, the ends included.
 */
bool otio_time_range_overlaps_time(OtioTimeRange range, OtioRationalTime time);
/**
 * Returns whether two ranges share any time at all.
 */
bool otio_time_range_overlaps_range(
    OtioTimeRange range,
    OtioTimeRange other,
    double epsilon_s);
/**
 * Returns whether this range ends before another begins.
 */
bool otio_time_range_before_range(
    OtioTimeRange range,
    OtioTimeRange other,
    double epsilon_s);
/**
 * Returns whether this range ends before an instant.
 */
bool otio_time_range_before_time(
    OtioTimeRange range,
    OtioRationalTime time,
    double epsilon_s);
/**
 * Returns whether this range ends exactly where another begins.
 */
bool otio_time_range_meets(OtioTimeRange range, OtioTimeRange other, double epsilon_s);
/**
 * Returns whether another range starts where this one does.
 */
bool otio_time_range_begins_range(
    OtioTimeRange range,
    OtioTimeRange other,
    double epsilon_s);
/**
 * Returns whether this range starts at an instant.
 */
bool otio_time_range_begins_time(
    OtioTimeRange range,
    OtioRationalTime time,
    double epsilon_s);
/**
 * Returns whether another range ends where this one does.
 */
bool otio_time_range_finishes_range(
    OtioTimeRange range,
    OtioTimeRange other,
    double epsilon_s);
/**
 * Returns whether this range ends at an instant.
 */
bool otio_time_range_finishes_time(
    OtioTimeRange range,
    OtioRationalTime time,
    double epsilon_s);
/**
 * Returns whether two ranges share more than a single boundary instant.
 */
bool otio_time_range_intersects(
    OtioTimeRange range,
    OtioTimeRange other,
    double epsilon_s);
/**
 * Returns the transform applied to an instant.
 */
OtioRationalTime otio_time_transform_applied_to_time(
    OtioTimeTransform transform,
    OtioRationalTime time);
/**
 * Returns the transform applied to a span.
 */
OtioTimeRange otio_time_transform_applied_to_range(
    OtioTimeTransform transform,
    OtioTimeRange range);
/**
 * Returns the transform applied to another transform.
 */
OtioTimeTransform otio_time_transform_applied_to_transform(
    OtioTimeTransform transform,
    OtioTimeTransform other);