sdk/csharp/OpenTimelineIO/Interop.cs


    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
    internal static extern Status otio_node_visible(IntPtr source, Native.OtioNode nodeHandle, out byte outVisible);

    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
    internal static extern byte otio_is_drop_frame_rate(double rate);

    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
    internal static extern byte otio_is_smpte_timecode_rate(double rate);

    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
    internal static extern double otio_nearest_smpte_timecode_rate(double rate);

    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
    internal static extern Native.OtioRationalTime otio_rational_time_add(Native.OtioRationalTime left, Native.OtioRationalTime right);

    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
    internal static extern byte otio_rational_time_almost_equal(Native.OtioRationalTime left, Native.OtioRationalTime right, double delta);

    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
    internal static extern Native.OtioRationalTime otio_rational_time_ceil(Native.OtioRationalTime time);

    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
    internal static extern int otio_rational_time_compare(Native.OtioRationalTime left, Native.OtioRationalTime right);

    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
    internal static extern Native.OtioRationalTime otio_rational_time_duration_from_start_end_time(Native.OtioRationalTime startTime, Native.OtioRationalTime endTimeExclusive);

    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
    internal static extern Native.OtioRationalTime otio_rational_time_duration_from_start_end_time_inclusive(Native.OtioRationalTime startTime, Native.OtioRationalTime endTimeInclusive);

    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
    internal static extern byte otio_rational_time_equal(Native.OtioRationalTime left, Native.OtioRationalTime right);

    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
    internal static extern Native.OtioRationalTime otio_rational_time_floor(Native.OtioRationalTime time);

    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
    internal static extern Native.OtioRationalTime otio_rational_time_from_frames(double frame, double rate);

    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
    internal static extern Native.OtioRationalTime otio_rational_time_from_seconds(double seconds);

    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
    internal static extern Native.OtioRationalTime otio_rational_time_from_seconds_at_rate(double seconds, double rate);

    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
    internal static extern Status otio_rational_time_from_time_string(IntPtr timeString, double rate, out Native.OtioRationalTime outTime);

    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
    internal static extern Status otio_rational_time_from_timecode(IntPtr timecode, double rate, out Native.OtioRationalTime outTime);

    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
    internal static extern byte otio_rational_time_is_valid(Native.OtioRationalTime time);

    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
    internal static extern Native.OtioRationalTime otio_rational_time_negate(Native.OtioRationalTime time);

    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
    internal static extern Native.OtioRationalTime otio_rational_time_rescaled_to(Native.OtioRationalTime time, double rate);

    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
    internal static extern Native.OtioRationalTime otio_rational_time_rescaled_to_time(Native.OtioRationalTime time, Native.OtioRationalTime other);

    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
    internal static extern Native.OtioRationalTime otio_rational_time_round(Native.OtioRationalTime time);

    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
    internal static extern byte otio_rational_time_strictly_equal(Native.OtioRationalTime left, Native.OtioRationalTime right);

    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
    internal static extern Native.OtioRationalTime otio_rational_time_subtract(Native.OtioRationalTime left, Native.OtioRationalTime right);

    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
    internal static extern int otio_rational_time_to_frames(Native.OtioRationalTime time);

    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
    internal static extern int otio_rational_time_to_frames_at_rate(Native.OtioRationalTime time, double rate);

    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
    internal static extern Status otio_rational_time_to_nearest_timecode_at(Native.OtioRationalTime time, double rate, DropFrame dropFrame, out Native.OtioBuffer outTimecode);

    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
    internal static extern double otio_rational_time_to_seconds(Native.OtioRationalTime time);

    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
    internal static extern Status otio_rational_time_to_time_string(Native.OtioRationalTime time, out Native.OtioBuffer outString);

    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
    internal static extern Status otio_rational_time_to_timecode(Native.OtioRationalTime time, out Native.OtioBuffer outTimecode);

    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
    internal static extern Status otio_rational_time_to_timecode_at(Native.OtioRationalTime time, double rate, DropFrame dropFrame, out Native.OtioBuffer outTimecode);

    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
    internal static extern double otio_rational_time_value_rescaled_to(Native.OtioRationalTime time, double rate);

    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
    internal static extern Status otio_serializable_collection_new(IntPtr target, IntPtr name, out Native.OtioNode outNode);

    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
    internal static extern Status otio_stack_new(IntPtr target, IntPtr name, out Native.OtioNode outNode);

    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
    internal static extern Status otio_time_effect_new(IntPtr target, IntPtr name, IntPtr effectName, out Native.OtioNode outNode);

    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
    internal static extern byte otio_time_range_before_range(Native.OtioTimeRange range, Native.OtioTimeRange other, double epsilonS);

    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
    internal static extern byte otio_time_range_before_time(Native.OtioTimeRange range, Native.OtioRationalTime time, double epsilonS);

    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
    internal static extern byte otio_time_range_begins_range(Native.OtioTimeRange range, Native.OtioTimeRange other, double epsilonS);

    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
    internal static extern byte otio_time_range_begins_time(Native.OtioTimeRange range, Native.OtioRationalTime time, double epsilonS);

    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
    internal static extern Native.OtioTimeRange otio_time_range_clamped_range(Native.OtioTimeRange range, Native.OtioTimeRange other);

    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
    internal static extern Native.OtioRationalTime otio_time_range_clamped_time(Native.OtioTimeRange range, Native.OtioRationalTime time);

    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
    internal static extern byte otio_time_range_contains_range(Native.OtioTimeRange range, Native.OtioTimeRange other, double epsilonS);

    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
    internal static extern byte otio_time_range_contains_time(Native.OtioTimeRange range, Native.OtioRationalTime time);

    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
    internal static extern Native.OtioTimeRange otio_time_range_duration_extended_by(Native.OtioTimeRange range, Native.OtioRationalTime by);

    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
    internal static extern Native.OtioRationalTime otio_time_range_end_time_exclusive(Native.OtioTimeRange range);

    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
    internal static extern Native.OtioRationalTime otio_time_range_end_time_inclusive(Native.OtioTimeRange range);

    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
    internal static extern Native.OtioTimeRange otio_time_range_extended_by(Native.OtioTimeRange range, Native.OtioTimeRange other);

    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
    internal static extern byte otio_time_range_finishes_range(Native.OtioTimeRange range, Native.OtioTimeRange other, double epsilonS);

    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
    internal static extern byte otio_time_range_finishes_time(Native.OtioTimeRange range, Native.OtioRationalTime time, double epsilonS);

    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
    internal static extern Native.OtioTimeRange otio_time_range_from_start_end_time(Native.OtioRationalTime startTime, Native.OtioRationalTime endTimeExclusive);

    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
    internal static extern Native.OtioTimeRange otio_time_range_from_start_end_time_inclusive(Native.OtioRationalTime startTime, Native.OtioRationalTime endTimeInclusive);

    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
    internal static extern byte otio_time_range_intersects(Native.OtioTimeRange range, Native.OtioTimeRange other, double epsilonS);

    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
    internal static extern byte otio_time_range_is_valid(Native.OtioTimeRange range);

    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
    internal static extern byte otio_time_range_meets(Native.OtioTimeRange range, Native.OtioTimeRange other, double epsilonS);

    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
    internal static extern byte otio_time_range_overlaps_range(Native.OtioTimeRange range, Native.OtioTimeRange other, double epsilonS);

    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
    internal static extern byte otio_time_range_overlaps_time(Native.OtioTimeRange range, Native.OtioRationalTime time);

    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
    internal static extern Native.OtioTimeRange otio_time_transform_applied_to_range(Native.OtioTimeTransform transform, Native.OtioTimeRange range);

    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
    internal static extern Native.OtioRationalTime otio_time_transform_applied_to_time(Native.OtioTimeTransform transform, Native.OtioRationalTime time);

    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
    internal static extern Native.OtioTimeTransform otio_time_transform_applied_to_transform(Native.OtioTimeTransform transform, Native.OtioTimeTransform other);

    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
    internal static extern Status otio_timeline_clear_global_start_time(IntPtr target, Native.OtioNode nodeHandle);
